ADD: Ctrl+S keyboard shortcut. FIX: Delay in design refresh upon first load.

--- a/Article/PlantUMLEditor.htm
+++ b/Article/PlantUMLEditor.htm
@@ -19,7 +19,7 @@
         <a href="http://code.google.com/p/plantumleditor/">
         http://code.google.com/p/plantumleditor/</a></p>
     <p>
-        Please read the pre-requisites.</p>
+        Please read the pre-requisites carefully.</p>
     <h2>
         Introduction</h2>
     <p>
@@ -46,10 +46,8 @@
     <p>
         Here&#39;s a quick screencast how it works:</p>
     <p>
-    <!--
     <img alt="PlantUML Screencast" src="http://plantumleditor.googlecode.com/files/PlantUmlScreencast3.gif" />
-    -->
-        </p>
+    </p>
     <h2>
         How to install it</h2>
     <p>
@@ -1122,7 +1120,7 @@ public class WeakReference&lt;T&gt; : IDisposable
         I have added the implicit operator conversions to make use of
         <span class="style1">WeakReference&lt;T&gt;</span> more convenient.</p>
     <h3>
-        SStuffing lots of data in MenuItem</h3>
+        Stuffing lots of data in MenuItem</h3>
     <p>
         You must have noticed my clever use of <span class="style1">Tag</span> property? If not, then here&#39;s it is 
         again. I am storing the UML snippet inside the <span class="style1">Tag</span> of each menu item this way:</p>
@@ -1325,7 +1323,7 @@ UpdateChecker.DownloadProgressChanged = new Action&lt;DownloadProgressChangedEve
         produced. Making major changes is also as easy as doing search replace and 
         copy-pasting blocks here and there. You don&#39;t get such agility in any 
         conventional mouse-based UML designers. Hope you find this tool useful and 
-        spread the love.&nbsp;</p>
+        if you do, please spread the love.&nbsp;</p>
 
 </body>
 </html>
